[tool.poetry]
name = "pymlviz"
version = "0.1.0"
description = "Visualization package for ML models."
authors = ["Anas Muhammad <anas.m.017@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.1.3"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
