[tool.poetry]
name = "pymlviz"
version = "0.1.0"
description = "Visualization package for ML models."
authors = ["Anas Muhammad <anas.m.017@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
numpy = "^1.18.1"
sklearn = "^0.0"
altair = "^4.0.1"
matplotlib = "^3.1.3"
[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
numpy = "^1.18"
pandas = "^1.0"
scikit-learn = "^0.22.2"
sphinxcontrib-napoleon = "^0.7"
sphinx = "^2.4.4"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
